<resources>
	<string name="app_name">Andor\'s Trail</string>
	<string name="app_description">Quest-driven fantasy RPG</string>
	<string name="exit_to_menu">Exit to menu</string>
	<string name="menu_settings">Preferences</string>
	<string name="menu_save">Save</string>
	<string name="menu_save_gamesaved">Game was saved to slot %1$d</string>
	<string name="menu_save_failed">Failed to save game! Is the SD card mounted and writable?</string>
	<string name="loadsave_title_save">Save game</string>
	<string name="loadsave_title_load">Load saved game</string>
	<string name="loadsave_selectslot">Select slot</string>
	<string name="savegame_currenthero_displayinfo">level %1$d, %2$d exp, %3$d gold</string>
	<string name="dialog_loading_message">Loading resources…</string>
	<string name="dialog_loading_failed_title">Load Failed</string>
	<string name="dialog_loading_failed_message">Andor\'s Trail was unable to load the savegame file.\n\n:(\n\nThe file may be damaged or incomplete.</string>
	<string name="dialog_loading_failed_incorrectversion">Andor\'s Trail was unable to load the savegame file. This savegame file is created with a newer version than what is currently running.</string>
	<string name="dialog_recenter">Recenter</string>
	<string name="dialog_close">Close</string>
	<string name="dialog_more">More</string>
	<string name="dialog_monsterencounter_title">Encounter</string>
	<string name="dialog_monsterencounter_message">Do you want to attack?\nDifficulty: %1$s</string>
	<string name="dialog_monsterencounter_info">Info</string>
	<string name="dialog_monsterencounter_conditions">Conditions</string>
	<string name="status_hp">HP:</string>
	<string name="status_ap">AP:</string>
	<string name="status_exp">XP:</string>
	<string name="heroinfo_char">Overview</string>
	<string name="heroinfo_inv">Items</string>
	<string name="heroinfo_skill">Skills</string>
	<string name="heroinfo_skill_categories">Category</string>
	<string name="heroinfo_skill_sort">Sort</string>
	<string name="heroinfo_levelup">Level up</string>
	<string name="heroinfo_level">Level</string>
	<string name="heroinfo_totalexperience">Total experience</string>
	<string name="heroinfo_wornequipment">Worn equipment</string>
	<string name="heroinfo_inventory">Inventory</string>
	<string name="heroinfo_inventory_categories">Category</string>
	<string name="heroinfo_inventory_sort">Sort By</string>
	<string name="heroinfo_gold">Gold: %1$d</string>
	<string name="heroinfo_healthpoints">Health points (HP):</string>
	<string name="heroinfo_experiencepoints">Experience points (XP):</string>
	<string name="heroinfo_actionpoints">Action points (AP):</string>
	<string name="heroinfo_quests">Quests</string>
	<string name="combat_attack">Attack (%1$d AP)</string>
	<string name="combat_move">Move (%1$d AP)</string>
	<string name="combat_use">Use item</string>
	<string name="combat_endturn">End turn</string>
	<string name="combat_flee">Flee</string>
	<string name="combat_begin_flee">You can now flee combat by clicking in the direction you want to move.</string>
	<string name="combat_flee_failed">You failed to flee!</string>
	<string name="combat_status_ap">AP: %1$d</string>
	<string name="combat_monsterhealth">HP:</string>
	<string name="combat_monsteraction">%1$s is attacking.</string>
	<string name="combat_result_monstermiss">%1$s misses!</string>
	<string name="combat_result_monsterhit">%1$s hits you for %2$d hp!</string>
	<string name="combat_result_monsterhitcritical">%1$s gets a critical hit for %2$d hp!</string>
	<string name="combat_result_heromiss">Your attack misses.</string>
	<string name="combat_result_herohit">You hit %1$s for %2$d hp!</string>
	<string name="combat_result_herohitcritical">You get a critical hit on %1$s for %2$d hp!</string>
	<string name="combat_result_herokillsmonster">%1$s dies!</string>
	<string name="combat_not_enough_ap">Not enough AP left this round.</string>
	<string name="combat_hero_dies">You fall unconscious, but fortunately wake up alive, dazed and fatigued. You lost %1$d experience.</string>
	<string name="combat_miss_animation_message">MISS</string>
	<string name="combat_taunt_monster">You taunt %1$s!</string>
	<string name="combat_condition_player_apply">You are affected by %1$s.</string>
	<string name="combat_condition_player_clear">You are cleared of %1$s.</string>
	<string name="combat_condition_player_immune">You are now immunized against %1$s.</string>
	<string name="combat_condition_monster_apply">%1$s is affected by %2$s.</string>
	<string name="combat_condition_monster_clear">%1$s is cleared of %2$s.</string>
	<string name="combat_condition_monster_immune">%1$s is now immunized against %2$s.</string>
	<string name="inventory_info">Info</string>
	<string name="inventory_equip">Equip</string>
	<string name="inventory_unequip">Unequip</string>
	<string name="inventory_use">Use</string>
	<string name="inventory_drop">Drop</string>
	<string name="inventory_item_used">You used %1$s.</string>
	<string name="inventory_item_dropped">%1$s was dropped.</string>
	<string name="inventory_item_equipped">You equipped %1$s.</string>
	<string name="dialog_loot_pickall">Pick up all</string>
	<string name="dialog_loot_foundgold">You found %1$d gold. </string>
	<string name="dialog_loot_pickedupitem">You picked up an item. </string>
	<string name="dialog_loot_pickedupitems">You picked up %1$d items. </string>
	<string name="dialog_groundloot_title">Items</string>
	<string name="dialog_groundloot_message">You found some items. </string>
	<string name="dialog_monsterloot_title">Victory</string>
	<string name="dialog_monsterloot_message">You survived the encounter. </string>
	<string name="dialog_monsterloot_gainedexp">You gained %1$d experience. </string>
	<string name="monster_difficulty_veryeasy">Very easy</string>
	<string name="monster_difficulty_easy">Easy</string>
	<string name="monster_difficulty_normal">Normal</string>
	<string name="monster_difficulty_hard">Hard</string>
	<string name="monster_difficulty_veryhard">Very hard</string>
	<string name="monster_difficulty_impossible">Impossible</string>
	<string name="actorinfo_class">Class:</string>
	<string name="actorinfo_difficulty">Difficulty:</string>
	<string name="actorinfo_health">Health:</string>
	<string name="actorinfo_attack">Attack:</string>
	<string name="actorinfo_defense">Defense:</string>
	<string name="actorinfo_movecost">Move cost (AP):</string>
	<string name="actorinfo_basetraits">Base combat statistics (without equipment and skills)</string>
	<string name="actorinfo_currenttraits">Combat statistics (current)</string>
	<string name="traitsinfo_attack_cost">Attack cost (AP):</string>
	<string name="traitsinfo_attack_chance">Attack chance:</string>
	<string name="traitsinfo_attack_damage">Attack damage:</string>
	<string name="traitsinfo_criticalhit_skill">Critical hit skill:</string>
	<string name="traitsinfo_criticalhit_multiplier">Critical multiplier:</string>
	<string name="traitsinfo_defense_chance">Block chance:</string>
	<string name="traitsinfo_defense_damageresist">Damage resistance:</string>
	<string name="iteminfo_category">Category: </string>
	<string name="iteminfo_action_use">Use</string>
	<string name="iteminfo_action_equip">Equip</string>
	<string name="iteminfo_action_unequip">Unequip</string>
	<string name="iteminfo_action_use_ap">Use (%1$d AP)</string>
	<string name="iteminfo_action_equip_ap">Equip (%1$d AP)</string>
	<string name="iteminfo_action_unequip_ap">Unequip (%1$d AP)</string>
	<string name="startscreen_continue">Continue current game</string>
	<string name="startscreen_newgame">New game</string>
	<string name="startscreen_newgame_start">Start game</string>
	<string name="startscreen_newgame_confirm">You will lose your current game and your current character, are you sure you want to start a new game?</string>
	<string name="startscreen_about">About/help</string>
	<string name="startscreen_selectherosprite">Choose your hero</string>
	<string name="startscreen_enterheroname">Enter hero name</string>
	<string name="startscreen_load">Load</string>
	<string name="conversation_rewardexp"> [You gained %1$d experience]</string>
	<string name="conversation_rewardgold"> [You gained %1$d gold]</string>
	<string name="conversation_lostgold"> [You lost %1$d gold]</string>
	<string name="conversation_rewarditem"> [You gained an item]</string>
	<string name="conversation_rewarditems"> [You gained %1$d items]</string>
	<string name="conversation_next">Next</string>
	<string name="conversation_leave">Leave</string>
	<string name="shop_buy">Buy</string>
	<string name="shop_sell">Sell</string>
	<string name="shop_infoitem">Info</string>
	<string name="shop_buyitem">Buy (%1$d gold)</string>
	<string name="shop_sellitem">Sell (%1$d gold)</string>
	<string name="shop_yourgold">Your gold: %1$d</string>
	<string name="shop_item_bought">%1$s bought.</string>
	<string name="shop_item_sold">%1$s sold.</string>
	<string name="shop_item_sort">Sort</string>
	<string name="levelup_title">Level up</string>
	<string name="levelup_description">Welcome to level %1$d!</string>
	<string name="levelup_buttontext">Level up</string>
	<string name="levelup_add_health">Increase health (+%1$d HP)</string>
	<string name="levelup_add_health_description">Adds %1$d to your maximum health.</string>
	<string name="levelup_add_attackchance">Increase attack chance (+%1$d)</string>
	<string name="levelup_add_attackchance_description">Adds %1$d to your base attack chance.</string>
	<string name="levelup_add_attackdamage">Increase attack damage (+%1$d)</string>
	<string name="levelup_add_attackdamage_description">Adds %1$d to your base attack damage.</string>
	<string name="levelup_add_blockchance">Increase block chance (+%1$d)</string>
	<string name="levelup_add_blockchance_description">Adds %1$d to your base block chance.</string>
	<string name="dialog_rest_title">Rest</string>
	<string name="dialog_rest_confirm_message">Do you want to rest here?</string>
	<string name="dialog_rest_message">You have rested and regained your full health.</string>
	<string name="about_button1">Help</string>
	<string name="about_button2">Authors</string>
	<string name="about_button3">License</string>
	<string name="about_contents1">
		Welcome to Andor\'s Trail, an open-source roguelike RPG on Android.&lt;br /&gt;
		&lt;br /&gt;
		&lt;a href="http://andorstrail.com/"&gt;Game forums on andorstrail.com for questions and gameplay discussions.&lt;/a&gt;&lt;br /&gt;
		&lt;br /&gt;
		&lt;a href="http://andorstrail.com/wiki"&gt;Game wiki for info about the Andor\'s Trail world, among other things.&lt;/a&gt;&lt;br /&gt;
		&lt;br /&gt;
		&lt;a href="https://github.com/Zukero/andors-trail/"&gt;Project source code on github.com for developers.&lt;/a&gt;&lt;br /&gt;
		&lt;br /&gt;
		Please visit the forums to discuss the game with other players.&lt;br /&gt;
	</string>
	<string name="actorinfo_currentconditions">Active conditions</string>
	<string name="skill_longdescription_weapon_chance">Increases attack chance by %1$d percentage points for each skill level.</string>
	<string name="skillinfo_action_levelup">Level up</string>
	<string name="skill_current_level">Current level: %1$d</string>
	<string name="skill_prerequisite_other_skill">To level up this skill, you need at least level %1$d of the %2$s skill.</string>
	<string name="levelup_adds_new_skillpoint">This level also gives you a new skill point to spend!</string>
	<string name="loadsave_save_to_new_slot">Create new savegame slot</string>
	<string name="traitsinfo_base_max_ap">Max AP:</string>
</resources>