<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/dialog_margin" >

    <TextView
        android:id="@+id/levelup_title"
        style="@style/titleWithIcon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/ui_theme_richframe_bitmap"
        android:drawableLeft="@drawable/char_hero"
        android:text="@string/levelup_title" />

    <TextView
        android:id="@+id/levelup_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/ui_theme_stdframe_bitmap"
        android:text="@string/levelup_description" />

    <ScrollView
        style="@style/AndorsTrail_Style_StdFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            android:paddingRight="5dp" >

            <Button
                android:id="@+id/levelup_add_health"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/levelup_add_health" />

            <Button
                android:id="@+id/levelup_add_attackchance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/levelup_add_attackchance" />

            <Button
                android:id="@+id/levelup_add_attackdamage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/levelup_add_attackdamage" />

            <Button
                android:id="@+id/levelup_add_blockchance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/levelup_add_blockchance" />

            <TextView
                android:id="@+id/levelup_adds_new_skillpoint"
                style="@style/textWithIcon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ui_icon_skill"
                android:text="@string/levelup_adds_new_skillpoint" />

            <!-- Workaround http://code.google.com/p/andors-trail/issues/detail?id=242 -->

            <ListView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@null" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>