<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/skillinfo_title"
        style="@style/titleWithIcon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/ui_theme_richframe_bitmap"
        android:drawableLeft="@drawable/ui_icon_skill"
        android:gravity="start"
        android:text="@string/heroinfo_skill" />

    <ScrollView
        style="@style/AndorsTrail_Style_StdFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dialog_margin" >

            <TextView
                android:id="@+id/skillinfo_currentlevel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="@dimen/section_margin"
                android:text="@string/skill_current_level" />

            <TextView
                android:id="@+id/skillinfo_longdescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/section_margin"
                android:text="@string/skill_longdescription_weapon_chance" />

            <TextView
                android:id="@+id/skillinfo_requirement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/section_margin"
                android:text="@string/skill_prerequisite_other_skill" />
        </LinearLayout>
    </ScrollView>

    <!-- Workaround http://code.google.com/p/andors-trail/issues/detail?id=242 -->

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent" />

    <LinearLayout
        style="@style/AndorsTrail_Style_StdFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/skillinfoinfo_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/skillinfo_action_levelup" />

        <Button
            android:id="@+id/skillinfoinfo_close"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dialog_close" />
    </LinearLayout>

</LinearLayout>