<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/monsterencounter_title"
        style="@style/titleWithIcon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/ui_theme_richframe_bitmap"
        android:drawableLeft="@drawable/equip_weapon"
        android:gravity="start"
        android:text="@string/dialog_monsterencounter_title" />

    <LinearLayout
        style="@style/AndorsTrail_Style_StdFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dialog_margin" >

        <TextView
            android:id="@+id/monsterencounter_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_monsterencounter_message" />
    </LinearLayout>

    <!-- Workaround http://code.google.com/p/andors-trail/issues/detail?id=242 -->

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent" />

    <LinearLayout
        style="@style/AndorsTrail_Style_StdFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/monsterencounter_attack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@android:string/yes" />

        <Button
            android:id="@+id/monsterencounter_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dialog_monsterencounter_info" />

        <Button
            android:id="@+id/monsterencounter_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@android:string/no" />
    </LinearLayout>

</LinearLayout>